replaced sequence methods by jdk methods